--- a/src/app/equipment/equipment.component.html
+++ b/src/app/equipment/equipment.component.html
@@ -3,6 +3,7 @@
     <ol>
         <li *ngFor="let item of equipmentItems">
             <!-- "Add to Cargo Hold" button goes here. -->
+            <button  [class.active]="active" (click)="addItem(item)"[disabled]="cargoHold.length >= maxItems || cargoMass+item.mass > maximumAllowedMass"  >Add to Cargo Hold</button>
             {{item.name}}, {{item.mass}} kg
         </li>
     </ol>
@@ -16,7 +17,8 @@
         <li *ngFor="let equipment of cargoHold">{{equipment.name}}</li>
     </ol>
     <p>Mass in Hold: {{cargoMass}} kg</p>
-    <p>Mass Budget Remaining: {{<!-- Calculate mass remaining here. -->}} kg</p>
+    <p [class.nearMaxMass]="">Mass Budget Remaining: {{maximumAllowedMass - this.cargoMass}} kg</p>
     <!-- Add the "Empty Hold" button here. -->
+    <button (click) ="cargoHold = [] ; cargoMass = 0" >Empty Hold</button>
 </div>
 
